inst/python/wandb/run-20230530_092851-50w7dw8t/files/output.log

<wandb.sdk.wandb_run.Run object at 0x142b5ca60>
  File "<stdin>", line 9
    wandb.finish()
    ^
SyntaxError: invalid syntax
KeyboardInterrupt
KeyboardInterrupt